# Superior-Agent

./: Dockerfile  README.md  agent_flow.json  pyproject.toml  requirements.txt  stock_report_AAPL_20251026_125756.md
output/: stock_report_AAPL_20251026_125946.md  stock_report_AAPL_20251027_094248.md  stock_report_AAPL_20251030_080223.md  stock_report_AAPL_20251031_102528.md  stock_report_ADBE_20251029_143139.md  stock_report_CL_20251029_231057.md  stock_report_GOOGL_20251029_104125.md  stock_report_GOOGL_20251030_074144.md  stock_report_IDFCFIRSTB.NS_20251026_155806.md  stock_report_INFY_20251030_074525.md  stock_report_LIC_20251030_075626.md  stock_report_NVDA_20251026_154924.md  stock_report_NVDA_20251030_102226.md  stock_report_NVDA_20251031_101613.md  stock_report_ORCL_20251027_161403.md  stock_report_PAYTM_20251028_233625.md  stock_report_TCS.NS_20251026_143949.md  stock_report_TCS_20251026_184903.md  stock_report_TSLA_20251026_151430.md
src/: requirements.txt
src/agent/: agent.py
src/agent/api/: api.py
src/prompts/: agent_prompts.py
src/templates/: index.html
src/tests/: main.py  test.py  tests.py
src/tools/: stock_analysis_tools.py
